--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: pamoja_app
-description: A volunteering opportunities mobile application
+description: A volunteering opportunities app 
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -10,35 +10,39 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # Firebase
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
+  firebase_storage: ^12.3.4  # For future image uploads
+  
+  # Google Sign In
+  google_sign_in: ^6.2.1
+
   # State Management
-  flutter_bloc: ^8.1.3
+  flutter_bloc: ^8.1.6
   equatable: ^2.0.5
 
   # UI Components
-  cupertino_icons: ^1.0.6
-  google_fonts: ^6.1.0
-  cached_network_image: ^3.3.0
+  cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1
+  cached_network_image: ^3.4.1
 
   # Navigation
-  go_router: ^12.1.1
-
-  # Firebase (for future backend integration)
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
-  cloud_firestore: ^4.13.6
+  go_router: ^14.6.2
 
   # Local Storage
-  shared_preferences: ^2.2.2
+  shared_preferences: ^2.3.2
 
   # Utilities
-  intl: ^0.18.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
-  bloc_test: ^9.1.5
-  mocktail: ^1.0.1
+  flutter_lints: ^4.0.0
+  bloc_test: ^9.1.7
+  mocktail: ^1.0.4
 
 flutter:
   uses-material-design: true
